[tool]
[tool.poetry]
name = "comms_panel"
version = "0.1.0"
homepage = "https://github.com/lalomartins/comms_panel"
description = "Desktop Firefish/Mastodon/Misskey client"
authors = ["Lalo Martins <lalo.martins@gmail.com>"]
readme = "README.rst"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications',
    'Intended Audience :: End Users/Desktop',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Topic :: Communications',
]
packages = [
    { include = "comms_panel" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.12"
wxPython = "^4.1.1"
mastodon-py = "^1.8.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
wxPython = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
